--- a/global.css
+++ b/global.css
@@ -17,7 +17,8 @@
   --colorIconlist2: rgb(185, 0, 0);
   --colorIconlist1: green;
   --colorIconFormHover: rgb(219, 219, 219);
-  --borderInputHover: solid 2px #000d7d;
+  --borderInputFocus: solid 2px #000d7d;
+  --borderLiHover: solid 1.5px #000d7d;
   --shadowForm: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --shadowList: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --shadowInput: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -27,6 +28,7 @@
   --transitionButton: 0.5s ease;
   --transitionInputFocus: 0.5s ease;
   --transitionLi: 0.5s ease;
+  --transitionSpanLi: 0.5s ease;
   --transformButtonHover: translateY(-5px) scale(1.1);
   --transformInputFocus: translateY(-5px) scale(1.01);
   --transformSpanIconActive: translateY(-5px) scale(1.01);
@@ -98,7 +100,7 @@ body form .input-box input {
 }
 body form .input-box input:focus {
   transform: var(--transformInputFocus);
-  border: var(--borderInputHover);
+  border: var(--borderInputFocus);
   box-shadow: var(--shadowInput);
 }
 body form .input-box button {
@@ -148,6 +150,7 @@ body .list ul li span {
   height: 30px;
   border-radius: 5px;
   cursor: pointer;
+  transition: var(--transitionSpanLi);
 }
 body .list ul li span:nth-child(1) {
   position: absolute;
@@ -180,6 +183,7 @@ body .list ul li span:nth-child(2):hover {
 body .list ul li:hover {
   transform: var(--transformLiHover);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border: var(--borderLiHover);
 }
 
 @keyframes liMovie {
