--- a/global.scss
+++ b/global.scss
@@ -22,7 +22,8 @@
     --colorIconlist1: green;
     --colorIconFormHover: rgb(219, 219, 219);
 
-    --borderInputHover: solid 2px #000d7d;
+    --borderInputFocus: solid 2px #000d7d;
+    --borderLiHover: solid 1.5px #000d7d;
 
     --shadowForm: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     --shadowList: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -34,6 +35,7 @@
     --transitionButton: 0.5s ease;
     --transitionInputFocus: 0.5s ease;
     --transitionLi: 0.5s ease;
+    --transitionSpanLi: 0.5s ease;
  
     --transformButtonHover: translateY(-5px) scale(1.1);
     --transformInputFocus: translateY(-5px) scale(1.01);
@@ -114,7 +116,7 @@ body {
 
                 &:focus {
                     transform: var(--transformInputFocus);
-                    border: var(--borderInputHover);
+                    border: var(--borderInputFocus);
                     box-shadow: var(--shadowInput);
                 }
             }
@@ -172,6 +174,7 @@ body {
                     height: 30px;
                     border-radius: 5px;
                     cursor: pointer;
+                    transition: var(--transitionSpanLi);
                 }
 
                 & span:nth-child(1) {
@@ -211,6 +214,7 @@ body {
                 &:hover {
                     transform: var(--transformLiHover);
                     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+                    border: var(--borderLiHover);
                 }
             }
         }
