--- a/global.css
+++ b/global.css
@@ -13,12 +13,15 @@
   --backgSpan2: rgb(255, 138, 138);
   --backgSpan1Hover: rgb(72, 255, 72);
   --backgSpan2Hover: rgb(255, 86, 86);
+  --backgLiActive: rgba(0, 197, 0, 0.66);
   --colorButton: rgb(255, 255, 255);
   --colorIconlist2: rgb(185, 0, 0);
   --colorIconlist1: green;
   --colorIconFormHover: rgb(219, 219, 219);
   --borderInputFocus: solid 2px #000d7d;
   --borderLiHover: solid 1.5px #000d7d;
+  --borderLiActive: solid 0.1px black;
+  --borderLiHoverActive: solid 1.5px #85ff7e;
   --shadowForm: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --shadowList: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --shadowInput: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -184,6 +187,20 @@ body .list ul li:hover {
   transform: var(--transformLiHover);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border: var(--borderLiHover);
+}
+body .list ul li.active {
+  background-color: var(--backgLiActive);
+  border: var(--borderLiActive);
+}
+body .list ul li.active:hover {
+  border: var(--borderLiHoverActive);
+}
+body .list ul li.active-check {
+  border: solid 1.5px darkgreen;
+}
+body .list ul li.active-trash {
+  border: solid 1.5px rgb(188, 0, 0);
+  background-color: rgb(255, 183, 183);
 }
 
 @keyframes liMovie {
