--- a/global.css
+++ b/global.css
@@ -14,14 +14,18 @@
   --backgSpan1Hover: rgb(72, 255, 72);
   --backgSpan2Hover: rgb(255, 86, 86);
   --backgLiActive: rgba(0, 197, 0, 0.66);
+  --backgLiActiveTrash: rgb(255, 150, 150);
   --colorButton: rgb(255, 255, 255);
   --colorIconlist2: rgb(185, 0, 0);
   --colorIconlist1: green;
   --colorIconFormHover: rgb(219, 219, 219);
+  --colorLiActive: rgb(255, 255, 255);
   --borderInputFocus: solid 2px #000d7d;
   --borderLiHover: solid 1.5px #000d7d;
   --borderLiActive: solid 0.1px black;
   --borderLiHoverActive: solid 1.5px #85ff7e;
+  --borderLiActiveCheck: solid 1.5px darkgreen;
+  --borderLiActiveTrash: solid 1.5px rgb(188, 0, 0);
   --shadowForm: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --shadowList: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   --shadowInput: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -144,6 +148,7 @@ body .list ul li {
   box-shadow: var(--shadowLi);
   transition: var(--transitionLi);
   animation: liMovie 0.5s ease;
+  font-weight: bold;
 }
 body .list ul li span {
   display: flex;
@@ -191,16 +196,18 @@ body .list ul li:hover {
 body .list ul li.active {
   background-color: var(--backgLiActive);
   border: var(--borderLiActive);
+  color: var(--colorLiActive);
+  font-weight: bold;
 }
 body .list ul li.active:hover {
   border: var(--borderLiHoverActive);
 }
 body .list ul li.active-check {
-  border: solid 1.5px darkgreen;
+  border: var(--borderLiActiveCheck);
 }
 body .list ul li.active-trash {
-  border: solid 1.5px rgb(188, 0, 0);
-  background-color: rgb(255, 183, 183);
+  border: var(--borderLiActiveTrash);
+  background-color: var(--backgLiActiveTrash);
 }
 
 @keyframes liMovie {
