--- a/global.scss
+++ b/global.scss
@@ -17,16 +17,20 @@
     --backgSpan1Hover: rgb(72, 255, 72);
     --backgSpan2Hover: rgb(255, 86, 86);
     --backgLiActive: rgba(0, 197, 0, 0.66);
+    --backgLiActiveTrash: rgb(255, 150, 150);
 
     --colorButton: rgb(255, 255, 255);
     --colorIconlist2: rgb(185, 0, 0);
     --colorIconlist1: green;
     --colorIconFormHover: rgb(219, 219, 219);
+    --colorLiActive: rgb(255, 255, 255);
 
     --borderInputFocus: solid 2px #000d7d;
     --borderLiHover: solid 1.5px #000d7d;
     --borderLiActive: solid 0.1px black;
     --borderLiHoverActive: solid 1.5px #85ff7e;
+    --borderLiActiveCheck: solid 1.5px darkgreen;
+    --borderLiActiveTrash: solid 1.5px rgb(188, 0, 0);
 
     --shadowForm: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     --shadowList: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -168,6 +172,7 @@ body {
                 box-shadow: var(--shadowLi);
                 transition: var(--transitionLi);
                 animation: liMovie 0.5s ease;
+                font-weight: bold;
 
                 & span {
                     display: flex;
@@ -223,6 +228,8 @@ body {
                 &.active {
                     background-color: var(--backgLiActive);
                     border: var(--borderLiActive);
+                    color: var(--colorLiActive);
+                    font-weight: bold;
 
                     &:hover {
                         border: var(--borderLiHoverActive);
@@ -230,12 +237,12 @@ body {
                 }
 
                 &.active-check {
-                    border: solid 1.5px darkgreen;
+                    border: var(--borderLiActiveCheck);
                 }
 
                 &.active-trash {
-                    border: solid 1.5px rgb(188, 0, 0);
-                    background-color: rgb(255, 183, 183);
+                    border: var(--borderLiActiveTrash);
+                    background-color: var(--backgLiActiveTrash);
                 }
             }
         }
